--- a/style.css
+++ b/style.css
@@ -27,25 +27,50 @@
     &:nth-of-type(8) { background-color: #add8e6; }
     &:nth-of-type(10) { background-color: #add8e6; }
     &:nth-of-type(11) { background-color: #add8e6; }
-    &:nth-of-type(16) { background-color: #d7d7d7; }
     &:nth-of-type(17) { background-color: #d7d7d7; }
+    &:nth-of-type(18) { background-color: #d7d7d7; }
   }
 
    button {
    width: auto;
    margin-top: 6px;
    padding: 6px;
-   background-color: #ffffff;
-   color: blue;
-   border: 2px solid blue;
    box-sizing: border-box;
    border-radius: 4px;
    cursor: pointer;
    box-shadow: 2px 2px;
-}
+  }
 
-  button {
-    &:hover { background-color: #f0f0f0; }
-    &:active { background-color: #b0c4de; }
+  button.unloosen-button {
+    &.secondary {
+      background-color: #ffffff;
+      color: blue;
+      border: 2px solid blue;
+      &:hover { background-color: #f0f0f0; }
+      &:active { background-color: #b0c4de; }
+      &.small {
+        padding: 2px;
+      }
+    }
+    &.nutral {
+      background-color: #ffffff;
+      color: #333;
+      border: 2px solid #666;
+      &:hover { background-color: #f0f0f0; }
+      &:active { background-color: #b0c4de; }
+      &.small {
+        padding: 2px;
+      }
+    }
+    &.primary {
+      background-color: #4169e1;
+      color: #f5f5f5;
+      border: 2px solid blue;
+      &:hover { background-color: #6495ed; }
+      &:active { background-color: brue; }
+      &.small {
+        padding: 2px;
+      }
+    }
   }
 }
