--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 #unloosen-main-div {
   input {
-    background-color: #ffffff;
+    background-color: #F9F9F9;
     width: 100%;
     color: #333;
     border: 1px solid #666;
@@ -10,7 +10,7 @@
   }
 
   select {
-    background-color: #ffffff;
+    background-color: #F9F9F9;
     width: 100%;
     color: #333;
     border: 1px solid #666;
@@ -21,12 +21,13 @@
   input {
     &.has-default-value { background-color: #d7d7d7;}
     &:focus { border: 2px solid #666; }
-    &:nth-of-type(1) { background-color: #add8e6; }
-    &:nth-of-type(6) { background-color: #add8e6; }
-    &:nth-of-type(7) { background-color: #add8e6; }
-    &:nth-of-type(8) { background-color: #add8e6; }
-    &:nth-of-type(10) { background-color: #add8e6; }
-    &:nth-of-type(11) { background-color: #add8e6; }
+    &:nth-of-type(1) { background-color: #ECC5FB; }
+    &:nth-of-type(6) { background-color: #ECC5FB; }
+    &:nth-of-type(7) { background-color: #ECC5FB; }
+    &:nth-of-type(8) { background-color: #ECC5FB; }
+    &:nth-of-type(9) { background-color: #d7d7d7; }
+    &:nth-of-type(10) { background-color: #ECC5FB; }
+    &:nth-of-type(11) { background-color: #ECC5FB; }
     &:nth-of-type(17) { background-color: #d7d7d7; }
     &:nth-of-type(18) { background-color: #d7d7d7; }
   }
@@ -44,14 +45,14 @@
   button.unloosen-button {
     &.small { padding: 2px; }
     &.secondary {
-      background-color: #ffffff;
+      background-color: #F9F9F9;
       color: blue;
       border: 2px solid blue;
       &:hover { background-color: #f0f0f0; }
       &:active { background-color: #b0c4de; }
     }
     &.nutral {
-      background-color: #ffffff;
+      background-color: #F9F9F9;
       color: #333;
       border: 2px solid #666;
       &:hover { background-color: #f0f0f0; }
@@ -65,11 +66,12 @@
       &:active { background-color: brue; }
     }
     &.danger-primary {
-      background-color: #ff6347;
-      color: #f5f5f5;
+      background-color: red;
+      color: #F9F9F9;
       border: 2px solid red;
-      &:hover { background-color: #ff4500; }
-      &:active { background-color: #cd5c5c; }
+      box-shadow: #666 2px 2px;
+      &:hover { background-color: rgb(233, 103, 103); }
+      &:active { background-color: rgb(177, 0, 0); }
     }
   }
 }
