--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@
       background-color: #4169e1;
       color: #f5f5f5;
       border: 2px solid blue;
+      box-shadow: #666 2px 2px ;
       &:hover { background-color: #6495ed; }
-      &:active { background-color: brue; }
+      &:active { background-color: blue; }
     }
     &.danger-primary {
       background-color: red;
