--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
    box-sizing: border-box;
    border-radius: 4px;
    cursor: pointer;
-   box-shadow: 2px 2px;
+   box-shadow: #666 2px 2px;
   }
 
   button.unloosen-button {
@@ -73,6 +73,13 @@
       box-shadow: #666 2px 2px;
       &:hover { background-color: rgb(233, 103, 103); }
       &:active { background-color: rgb(177, 0, 0); }
+    }
+  }
+
+  button.unloosen-button {
+    &.show-modal {
+      background-color: #FAF4B7;
+      border: 2px solid #666;
     }
   }
 }
