🩹 レコード削除時にモーダルを閉じる

--- a/style.css
+++ b/style.css
@@ -80,6 +80,8 @@
     &.show-modal {
       background-color: #FAF4B7;
       border: 2px solid #666;
+      &:hover { background-color: #a7a377; }
+      &:active { background-color: #d3b05c; }
     }
   }
 }
